--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  SteffenPL
 # Build settings
 markdown: kramdown
 # theme: minima
-theme: jekyll-theme-architect
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
